Bug 1076366 - HTTP cache v2: Hand out CacheEntry to read-only callback demanding re-validation, r=michal